Quadratic power penalty for charging example.

--- a/examples/charging.ipynb
+++ b/examples/charging.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
-    "\\text{minimize} \\quad & \\sum_{t=0}^T p_t \\left(u_t + \\eta |u_t|\\right)\\\\\n",
+    "\\text{minimize} \\quad & \\sum_{t=0}^T p_t \\left(u_t + \\eta |u_t|\\right) + \\gamma u_t^2\\\\\n",
     "\\text{subject to} \\quad &q_{t+1} = q_t + u_t \\quad \\forall t \\in \\{0,...,T \\}\\\\\n",
     "&-D \\leq u_t \\leq C \\quad \\forall t \\in \\{0,...,T \\}\\\\\n",
     "&0 \\leq q_t \\leq Q \\quad \\forall t \\in \\{0,...,T \\}\\\\\n",
@@ -28,11 +28,11 @@
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "where $u_t \\in \\mathbb{R}$ and $q_t \\in \\mathbb{R}_+$ are the variables. We reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming) by introducing the parameter $s_t = p_t \\eta$ and we use time vectors $u \\in \\mathbb{R}^T$, $p, s \\in \\mathbb{R}_+^T$ and $q \\in \\mathbb{R}_+^{T+1}$ to summarize the temporal variables and parameters. Finally, we solve\n",
+    "where $u_t \\in \\mathbb{R}$ and $q_t \\in \\mathbb{R}_+$ are the variables. We have added the regularization term $\\gamma u_t^2$ to reduce stress on the electronic system due to peak power values, with $\\gamma \\in \\mathbb{R}_+$. We reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming) by introducing the parameter $s_t = p_t \\eta$ and we use time vectors $u \\in \\mathbb{R}^T$, $p, s \\in \\mathbb{R}_+^T$ and $q \\in \\mathbb{R}_+^{T+1}$ to summarize the temporal variables and parameters. Finally, we solve\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
-    "\\text{minimize} \\quad & p^T u + s^T |u|\\\\\n",
+    "\\text{minimize} \\quad & p^T u + s^T |u| + \\gamma \\Vert u \\Vert_2^2\\\\\n",
     "\\text{subject to} \\quad &q_{1:T+1} = q_{0:T} + u\\\\\n",
     "&-D \\mathbb{1} \\leq u \\leq C \\mathbb{1}\\\\\n",
     "&\\mathbb{0} \\leq q \\leq Q \\mathbb{1}\\\\\n",
@@ -66,9 +66,10 @@
     "D = cp.Parameter(nonneg=True, name='D')\n",
     "C = cp.Parameter(nonneg=True, name='C')\n",
     "Q = cp.Parameter(nonneg=True, name='Q')\n",
+    "gamma = cp.Parameter(nonneg=True, name='gamma')\n",
     "\n",
     "# define objective\n",
-    "objective = cp.Minimize(p@u + s@cp.abs(u))\n",
+    "objective = cp.Minimize(p@u + s@cp.abs(u) + gamma*cp.sum_squares(u))\n",
     "\n",
     "# define constraints\n",
     "constraints = [q[1:] == q[:-1] + u,\n",
@@ -103,22 +104,29 @@
     "Q.value = 1\n",
     "C.value = 5*Q.value/(24*60)\n",
     "D.value = 2*C.value\n",
+    "gamma.value = 100\n",
     "\n",
     "val = problem.solve()\n",
     "\n",
-    "plt.plot(q.value)\n",
-    "plt.plot(p.value / max(p.value))\n",
-    "plt.grid()\n",
-    "plt.xlabel('Time [min]')\n",
-    "plt.ylabel('SOC (blue), Price Level (orange)')\n",
-    "plt.show()"
+    "fig, ax1 = plt.subplots()\n",
+    "\n",
+    "ax1.plot(100*q.value, color='b')\n",
+    "ax1.grid()\n",
+    "ax1.set_xlabel('Time [min]')\n",
+    "ax1.set_ylabel('SOC [%]', color='b')\n",
+    "ax1.tick_params(axis='y', labelcolor='b')\n",
+    "\n",
+    "ax2 = ax1.twinx()\n",
+    "ax2.plot(100*p.value / max(p.value), color='m')\n",
+    "ax2.set_ylabel('Price Level [%]', color='m')\n",
+    "ax2.tick_params(axis='y', labelcolor='m')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that it is optimal to charge the storage with maximum power during the medium price phase, then empty the storage when prices are highest, and then fully charge the storage for the lowest price of the day. Note that after the medium price phase, discharging and charging happens with varying and non-unique power values. Generating C source for the problem is as easy as:"
+    "We observe that it is optimal to charge the storage with maximum power during the medium price phase, then empty the storage when prices are highest, and then fully charge the storage for the lowest price of the day. Generating C source for the problem is as easy as:"
    ]
   },
   {
@@ -194,9 +202,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cpg_env",
+   "display_name": "test",
    "language": "python",
-   "name": "cpg_env"
+   "name": "test"
   },
   "language_info": {
    "codemirror_mode": {
