--- a/examples/charging.ipynb
+++ b/examples/charging.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "## Optimal Charging Example\n",
     "\n",
-    "We have an electric storage device with state-of-charge (SOC) $q_t \\in \\mathbb{R}_+$ at time $t$ and capacity $Q \\in \\mathbb{R}_+$. We denote the amount of energy charged from time $t$ to time $t+1$ as $u_t \\in \\mathbb{R}$, i.e., $q_{t+1} = q_t + u_t$. Power is limited by $C \\in \\mathbb{R}_+$ ($D \\in \\mathbb{R}_+$), the maximum possible magnitude of charging (discharging) power. The energy price $C(u_t)$ is higher when buying energy from the grid compared to the case of selling energy to the grid. Specifically, \n",
+    "We have an electric storage device with state-of-charge (SOC) $q_t \\in \\mathbb{R}_+$ at time $t$ and capacity $Q \\in \\mathbb{R}_+$. We denote the amount of energy charged from time $t$ to time $t+1$ as $u_t \\in \\mathbb{R}$, i.e., $q_{t+1} = q_t + u_t$. Power is limited by $C \\in \\mathbb{R}_+$ ($D \\in \\mathbb{R}_+$), the maximum possible magnitude of charging (discharging) power. The energy price $P(u_t)$ is higher when buying energy from the grid compared to the case of selling energy to the grid. Specifically, \n",
     "\n",
     "\\begin{equation}\n",
-    "C(u_i) = \\begin{cases}\n",
+    "P(u_i) = \\begin{cases}\n",
     "p_t u_t (1+\\eta) \\quad &\\text{if} \\quad u_t > 0 \\\\\n",
     "p_t u_t (1-\\eta) \\quad &\\text{otherwise},\n",
     "\\end{cases}\n",
@@ -102,7 +102,7 @@
     "eta = 0.1\n",
     "s.value = eta*p.value\n",
     "Q.value = 1\n",
-    "C.value = 5*Q.value/(24*60)\n",
+    "C.value = 3*Q.value/(24*60)\n",
     "D.value = 2*C.value\n",
     "gamma.value = 100\n",
     "\n",
