--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -166,6 +166,28 @@
     "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
     "print('C objective function value:', val)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimization results look as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from visualization.actuator import create_animation\n",
+    "from IPython.display import Image\n",
+    "    \n",
+    "create_animation(prob, 'actuator_animation')\n",
+    "\n",
+    "with open('actuator_animation.gif', 'rb') as f:\n",
+    "    display(Image(f.read()))"
+   ]
   }
  ],
  "metadata": {
