--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -123,10 +123,10 @@
     "# assign parameter values\n",
     "np.random.seed(0)\n",
     "prob.param_dict['S'].value = 100*np.eye(n)\n",
-    "prob.param_dict['W'].value = np.ones((n, m)) + 0.1*np.random.rand(n, m)\n",
-    "prob.param_dict['X_min'].value = np.random.rand(n, m)\n",
-    "prob.param_dict['X_max'].value = 10 + np.random.rand(n, m)\n",
-    "prob.param_dict['r'].value = np.matmul(prob.param_dict['X_min'].value.T, np.ones(n)) + 10*np.random.rand(m)\n",
+    "prob.param_dict['W'].value = 0.8*np.ones((n, m)) + 0.2*np.random.rand(n, m)\n",
+    "prob.param_dict['X_min'].value = np.zeros((n, m))\n",
+    "prob.param_dict['X_max'].value = np.ones((n, m))\n",
+    "prob.param_dict['r'].value = np.matmul(prob.param_dict['X_min'].value.T, np.ones(n)) + np.random.rand(m)\n",
     "\n",
     "# solve problem conventionally\n",
     "t0 = time.time()\n",
@@ -144,6 +144,21 @@
     "t1 = time.time()\n",
     "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
     "print('C objective function value:', val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from visualization.resource import create_animation\n",
+    "from IPython.display import Image\n",
+    "    \n",
+    "create_animation(prob, 'resource_animation')\n",
+    "\n",
+    "with open('resource_animation.gif', 'rb') as f:\n",
+    "    display(Image(f.read()))"
    ]
   }
  ],
