Visualization for network example.

--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -44,7 +44,7 @@
     "import numpy as np\n",
     "\n",
     "# define dimensions\n",
-    "n, m = 100, 10\n",
+    "n, m = 4, 5\n",
     "\n",
     "# define variable\n",
     "f = cp.Variable(n, name='f')\n",
@@ -157,6 +157,21 @@
     "t1 = time.time()\n",
     "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
     "print('C objective function value:', val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from visualization.network import create_animation\n",
+    "from IPython.display import Image\n",
+    "    \n",
+    "create_animation(prob, 'network_animation')\n",
+    "\n",
+    "with open('network_animation.gif', 'rb') as f:\n",
+    "    display(Image(f.read()))"
    ]
   }
  ],
