Made ADP example conic.

--- a/examples/ADP.ipynb
+++ b/examples/ADP.ipynb
@@ -6,21 +6,21 @@
    "source": [
     "## Approximate Dynamic Programming Example\n",
     "\n",
-    "We consider an optimal control problem that is similar to that described in the [model predictive control example](https://github.com/cvxgrp/codegen/blob/main/examples/MPC.ipynb). However, we assume that the system matrices are functions of the state $x \\in \\mathbb{R}^n$, i.e., we have the nonlinear time-invariant system $\\left( A(x), B(x)\\right) \\in \\left( \\mathbb{R}^{n \\times n}, \\mathbb{R}^{n \\times m} \\right)$ with control input $u \\in \\mathbb{R}^m$ subject to optimization. The dynamics equation $x_{i+1} = A(x_i) x_i + B(x_i) u_i$ would be a non-convex constraint. Thus, we perform Approximate Dynamic Programming (ADP) [1] by predicting just one time step ahead and approximating the infinite-horizon cost as $\\left(A(x) x + B(x) u\\right)^T P \\left(A(x) x + B(x) u\\right)$ with measurement $x$. We solve the optimization problem\n",
+    "We consider an optimal control problem that is similar to that described in the [model predictive control example](https://github.com/cvxgrp/codegen/blob/main/examples/MPC.ipynb). However, we assume that the system matrices are functions of the state $x \\in \\mathbb{R}^n$, i.e., we have the nonlinear system $\\left( A(x), B(x)\\right) \\in \\left( \\mathbb{R}^{n \\times n}, \\mathbb{R}^{n \\times m} \\right)$ with control input $u \\in \\mathbb{R}^m$ subject to optimization. The dynamics equation $x_{i+1} = A(x_i) x_i + B(x_i) u_i$ would be a non-convex constraint. Thus, we perform Approximate Dynamic Programming (ADP) [1] by predicting just one time step ahead and approximating the infinite-horizon cost as $\\left(A(x) x + B(x) u\\right)^T P \\left(A(x) x + B(x) u\\right)$ with measurement $x$. We solve the optimization problem\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad & \\left(A(x) x + B(x) u\\right)^T P \\left(A(x) x + B(x) u\\right) + u^T R u\\\\\n",
-    "\\text{subject to} \\quad & \\Vert u \\Vert_\\infty \\leq 1,\n",
+    "\\text{subject to} \\quad & \\Vert u \\Vert_2 \\leq 1,\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "where $u \\in \\mathbb{R}^m$ is the variable and constrained within a box of size $1$. The cost matrices are positive definite: $P, R \\in \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^m$. We reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming), i.e.,\n",
+    "where $u \\in \\mathbb{R}^m$ is the variable and constrained within a euclidean ball of size $1$. The cost matrices are positive definite: $P, R \\in \\mathbb{S}_{++}^n, \\mathbb{S}_{++}^m$. We reformulate the problem to be [DPP-compliant](https://www.cvxpy.org/tutorial/advanced/index.html#disciplined-parametrized-programming), i.e.,\n",
     "\n",
     "\\begin{equation}\n",
     "\\begin{array}{ll}\n",
     "\\text{minimize} \\quad & \\Vert f+ G u \\Vert_2^2 + \\Vert R^{1/2} u \\Vert_2^2\\\\\n",
-    "\\text{subject to} \\quad &\\Vert u \\Vert_\\infty \\leq 1,\n",
+    "\\text{subject to} \\quad &\\Vert u \\Vert_2 \\leq 1,\n",
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
@@ -50,7 +50,7 @@
     "objective = cp.Minimize(cp.sum_squares(f+G@u) + cp.sum_squares(Rsqrt@u))\n",
     "\n",
     "# define constraints\n",
-    "constraints = [cp.norm(u, 'inf') <= 1]\n",
+    "constraints = [cp.norm(u, 2) <= 1]\n",
     "\n",
     "# define problem\n",
     "problem = cp.Problem(objective, constraints)"
@@ -153,7 +153,7 @@
     "t0 = time.time()\n",
     "# CVXPY chooses eps_abs=eps_rel=1e-5, max_iter=10000, polish=True by default,\n",
     "# however, we choose the OSQP default values here, as they are used for code generation as well\n",
-    "val = prob.solve(eps_abs=1e-3, eps_rel=1e-3, max_iter=4000, polish=False)\n",
+    "val = prob.solve()\n",
     "t1 = time.time()\n",
     "print('\\nPython solve time:', 1000*(t1-t0), 'ms')\n",
     "print('Python objective function value:', val)\n",
