Using OSQP for codegen in resource.ipynb, network.ipynb.

--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -108,7 +108,7 @@
     "sys.path.append('../')\n",
     "import cvxpygen as cpg\n",
     "\n",
-    "cpg.generate_code(problem, code_dir='network_code')"
+    "cpg.generate_code(problem, code_dir='network_code', solver='OSQP')"
    ]
   },
   {
