--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -95,7 +95,7 @@
     "sys.path.append('../')\n",
     "import cvxpygen as cpg\n",
     "\n",
-    "cpg.generate_code(problem, code_dir='resource_code')"
+    "cpg.generate_code(problem, code_dir='resource_code', solver='OSQP')"
    ]
   },
   {
