Using PyPI package in example notebooks.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -121,9 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "import cvxpygen as cpg\n",
+    "from cvxpygen import cpg\n",
     "\n",
     "cpg.generate_code(problem, code_dir='MPC_code')"
    ]
@@ -188,9 +186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "pypi",
    "language": "python",
-   "name": "test"
+   "name": "pypi"
   },
   "language_info": {
    "codemirror_mode": {
