--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -139,9 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "import cvxpygen as cpg\n",
+    "from cvxpygen import cpg\n",
     "\n",
     "cpg.generate_code(problem, code_dir='portfolio_code')"
    ]
@@ -218,9 +216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "pypi",
    "language": "python",
-   "name": "test"
+   "name": "pypi"
   },
   "language_info": {
    "codemirror_mode": {
