--- a/examples/ADP.ipynb
+++ b/examples/ADP.ipynb
@@ -115,9 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "import cvxpygen as cpg\n",
+    "from cvxpygen import cpg\n",
     "\n",
     "cpg.generate_code(problem, code_dir='ADP_code')"
    ]
@@ -177,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "pypi",
    "language": "python",
-   "name": "test"
+   "name": "pypi"
   },
   "language_info": {
    "codemirror_mode": {
