--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -175,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypi",
+   "display_name": "cvxpygen",
    "language": "python",
-   "name": "pypi"
+   "name": "cvxpygen"
   },
   "language_info": {
    "codemirror_mode": {
