--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -216,9 +216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypi",
+   "display_name": "cvxpygen",
    "language": "python",
-   "name": "pypi"
+   "name": "cvxpygen"
   },
   "language_info": {
    "codemirror_mode": {
