Adjusted printing in example notebooks.

--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -162,16 +162,16 @@
     "# however, we choose the OSQP default values here, as they are used for code generation as well\n",
     "val = prob.solve(eps_abs=1e-3, eps_rel=1e-3, max_iter=4000, polish=False)\n",
     "t1 = time.time()\n",
-    "print('\\nPython solve time:', 1000*(t1-t0), 'ms')\n",
-    "print('Python objective function value:', val)\n",
+    "print('\\nCVXPY\\nSolve time: %.3f ms' % (1000 * (t1 - t0)))\n",
+    "print('Objective function value: %.6f\\n' % val)\n",
     "\n",
     "# solve problem with C code via python wrapper\n",
     "prob.register_solve('CPG', cpg_solve)\n",
     "t0 = time.time()\n",
     "val = prob.solve(method='CPG')\n",
     "t1 = time.time()\n",
-    "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
-    "print('C objective function value:', val)"
+    "print('\\nCVXPYgen\\nSolve time: %.3f ms' % (1000 * (t1 - t0)))\n",
+    "print('Objective function value: %.6f\\n' % val)"
    ]
   },
   {
