--- a/examples/resource.ipynb
+++ b/examples/resource.ipynb
@@ -75,7 +75,7 @@
     "X_max.value = 10 + np.random.rand(n, m)\n",
     "r.value = np.matmul(X_min.value.T, np.ones(n)) + 10*np.random.rand(m)\n",
     "\n",
-    "val = problem.solve(solver='OSQP')"
+    "val = problem.solve()"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "from cvxpygen import cpg\n",
     "\n",
-    "cpg.generate_code(problem, code_dir='resource_code', solver='OSQP')"
+    "cpg.generate_code(problem, code_dir='resource_code')"
    ]
   },
   {
@@ -130,18 +130,18 @@
     "t0 = time.time()\n",
     "# CVXPY chooses eps_abs=eps_rel=1e-5, max_iter=10000, polish=True by default,\n",
     "# however, we choose the OSQP default values here, as they are used for code generation as well\n",
-    "val = prob.solve(solver='OSQP', eps_abs=1e-3, eps_rel=1e-3, max_iter=4000, polish=False)\n",
+    "val = prob.solve()\n",
     "t1 = time.time()\n",
-    "print('\\nPython solve time:', 1000*(t1-t0), 'ms')\n",
-    "print('Python objective function value:', val)\n",
+    "print('\\nCVXPY\\nSolve time: %.3f ms' % (1000 * (t1 - t0)))\n",
+    "print('Objective function value: %.6f\\n' % val)\n",
     "\n",
     "# solve problem with C code via python wrapper\n",
     "prob.register_solve('CPG', cpg_solve)\n",
     "t0 = time.time()\n",
     "val = prob.solve(method='CPG')\n",
     "t1 = time.time()\n",
-    "print('\\nC solve time:', 1000*(t1-t0), 'ms')\n",
-    "print('C objective function value:', val)"
+    "print('\\nCVXPYgen\\nSolve time: %.3f ms' % (1000 * (t1 - t0)))\n",
+    "print('Objective function value: %.6f\\n' % val)"
    ]
   },
   {
