Replace `pickle` with `dill` for serialization

--- a/examples/ADP.ipynb
+++ b/examples/ADP.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "from ADP_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import dill as pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
