--- a/examples/network.ipynb
+++ b/examples/network.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "from network_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import dill as pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
