--- a/examples/MPC.ipynb
+++ b/examples/MPC.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "from MPC_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import dill as pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
