--- a/examples/actuator.ipynb
+++ b/examples/actuator.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "from actuator_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import dill as pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
