--- a/examples/charging.ipynb
+++ b/examples/charging.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "from charging_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import dill as pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
