--- a/examples/portfolio.ipynb
+++ b/examples/portfolio.ipynb
@@ -159,7 +159,7 @@
    "source": [
     "from portfolio_code.cpg_solver import cpg_solve\n",
     "import numpy as np\n",
-    "import pickle\n",
+    "import dill as pickle\n",
     "import time\n",
     "\n",
     "# load the serialized problem formulation\n",
